   enabled, this option will cause periodic announce times to be calculated
   from the end of announcements rather than from the beginning.
 * The autopause option in queues.conf can be passed a new value, "all." The
   result is that if a member becomes auto-paused, he will be paused in all
   queues for which he is a member, not just the queue that failed to reach
   the member.

mISDN channel driver (chan_misdn) changes
----------------------------------------
 * Added display_connected parameter to misdn.conf to put a display string
   in the CONNECT message containing the connected name and/or number if
   the presentation setting permits it.
 * Added display_setup parameter to misdn.conf to put a display string
   in the SETUP message containing the caller name and/or number if the
   presentation setting permits it.
 * Made misdn.conf parameters localdialplan and cpndialplan take a -1 to
   indicate the dialplan settings are to be obtained from the asterisk
   channel.
 * Made misdn.conf parameter callerid accept the "name" <number> format
   used by the rest of the system.
 * Made use the nationalprefix and internationalprefix misdn.conf
   parameters to prefix any received number from the ISDN link if that
   number has the corresponding Type-Of-Number.  NOTE:  This includes
   comparing the incoming call's dialed number against the MSN list.
 * Added the following new parameters: unknownprefix, netspecificprefix,
   subscriberprefix, and abbreviatedprefix in misdn.conf to prefix any
   received number from the ISDN link if that number has the corresponding
   Type-Of-Number.
 * Added new dialplan application misdn_command which permits controlling
   the CCBS/CCNR functionality.
 * Added new dialplan function mISDN_CC which permits retrieval of various
   values from an active call completion record.
 * For PTP, you should manually send the COLR of the redirected-to party
   for an incomming redirected call if the incoming call could experience